tests/baselines/reference/restParameterWithBindingPattern1.errors.txt
tests/cases/compiler/restParameterWithBindingPattern1.ts(1,15): error TS2501: A rest element cannot contain a binding pattern.


==== tests/cases/compiler/restParameterWithBindingPattern1.ts (1 errors) ====
    function a(...{a, b}) { }
                  ~~~~~~
!!! error TS2501: A rest element cannot contain a binding pattern.